=head1 NAME

DBI::Changes - List of significant changes to the DBI

(As of $Date: 2007-08-09 22:50:55 +0100 (Thu, 09 Aug 2007) $ $Revision: 9833 $)

=cut

Assorted TODO notes:

Protect trace_msg from SIGPIPE?
prepare(...,{ Err=>\my $isolated_err, ...})
Move _new_sth to DBI::db::_new_sth (leave alias) and implement in C
Implement FETCH_many() in C
Or call _new_child and move to DBI::common?
Add trace modules that just records the last N trace messages into an array
and prepends them to any error message.

Gofo TODOs:

Add count of identical frozen_request (plus sum(results size)) to Gofer status
    Highlight those seen before.
Move post-request cleanup into separate method and enable hooks so
    it can be done after the response has been sent
Gofer - allow dbh attrib changes after connect?
    note them and pass in request as STORE method calls
    but then gofer server need to reset them to restore dbh to original state
    Or, change the attr in the connect() call, but that risks
    bloating the number of cache dbh in the server.
Gofer request flags:
    return current executor stats as an attribute - handy for tests
    will accept streamed resultsets
Add attr-passthru to prepare()? ie for gofer cache control & ReadOnly
Terminology for client and server ends
Document user/passwd issues at the various levels of the gofer stack
Policy's from pod
Policy for dbh attr FETCH (ie example_driver_path)
    or piggyback on skip_connect_check
    could also remember which attr have been returned to us
    so not bother FETCHing them (unless pedantic)
Call method on transport failure so transport can cleanup/reset if it wants
Gofer: gearman - need to disable coallesing for non-idempotent requests

=head2 Changes in DBI 1.59 (svn rev XXX),  XXth June 2007

  Fixed DBI::ProfileData to unescape headers lines read from data file.
  Fixed DBI::ProfileData to not clobber $_, thanks to Alexey Tourbin.
  Fixed DBI::SQL::Nano to not clobber $_, thanks to Alexey Tourbin.