@@ -1,4 +1,4 @@
-# $Id: DBI.pm 9833 2007-08-09 21:50:55Z timbo $
+# $Id: DBI.pm 9872 2007-08-23 11:33:10Z timbo $
 # vim: ts=8:sw=4
 #
 # Copyright (c) 1994-2007  Tim Bunce  Ireland
@@ -83,8 +83,12 @@ I<The synopsis above only lists the major methods and parameters.>
 =head2 GETTING HELP
 
 If you have questions about DBI, or DBD driver modules, you can get
-help from the I<dbi-users@perl.org> mailing list.  You can get help
-on subscribing and using the list by emailing I<dbi-users-help@perl.org>.
+help from the I<dbi-users@perl.org> mailing list.  You don't have to subscribe
+to the list in order to post, though I'd recommend it. You can get help on
+subscribing and using the list by emailing I<dbi-users-help@perl.org>.
+
+I don't recommend the DBI cpanform (at http://www.cpanforum.com/dist/DBI)
+because relatively few people read it compared with dbi-users@perl.org.
 
 To help you make the best use of the dbi-users mailing list,
 and any other lists or forums you may use, I I<strongly>
@@ -121,7 +125,7 @@ Tim he's very likely to just forward it to the mailing list.
 =head2 NOTES
 
 This is the DBI specification that corresponds to the DBI version 1.59
-($Revision: 9833 $).
+($Revision: 9872 $).
 
 The DBI is evolving at a steady pace, so it's good to check that
 you have the latest copy.
